v.1.1.4

Warning: your gear will have minus durability after this update possibly! 
Repair it first, because any hit will break it. This is because when max durability is reduced, so is current durability..

- removed jewels

- added gems!
- added runes!
- added runewords!
- added runeword awaken items // TODO

Gems are basically the jewels, but stackable and you can craft them into higher level versions.
They're also datapacks!
I have an idea how to add jewels back in, and they'll be more interesting :)

Yes runes were a long time coming. I waited till I figured out a good way to do them.
It's not hard to add them, it's hard to get them right.

Runes are now stackable just like gems and not random. Only the end result of socketing is random (the stat numbers).
I really didn't think of how much of a pain inventory management was until I saw dozens of chests full of runes.

Minor changes:
- fixed server crash on casting spell
- special mob stats are now in entity configs instead of hardcoded
- made gear have similar durability to vanilla diamond gear. I gave it too much it seems
- repair station now sucks fuel only when needed
- added config to show area screen text
- added level distance penalty config
- added golem boss which you can summon same as a wither but: soul sand block > iron block and mob head > bone block.
- you now need material only gotten by the golem boss drops to craft the modify station. 
- added config that by default makes all players count as if teamed (PVE mode basically), disable for pvp servers
This should hopefully stop the bug reports of "I can't heal my friend". But whether i keep this as on by default depends on amount of pvp players.
- fixed +0 exp messages
- stopped mobs from spawning on daytime and made their spawn restrictions like vanilla mobs. So should be less spawns on nighttime too.
- used the proper creative tab code, now no longer replace vanilla brewing tab. Seriously, nobody noticed?

v.1.1.3