@@ -4,6 +4,7 @@ import com.robertx22.age_of_exile.database.data.BaseRuneGem;
 import com.robertx22.age_of_exile.database.data.StatModifier;
 import com.robertx22.age_of_exile.database.data.gear_types.bases.BaseGearType.SlotFamily;
 import com.robertx22.age_of_exile.database.data.stats.StatScaling;
+import com.robertx22.age_of_exile.database.registry.SlashRegistry;
 import com.robertx22.age_of_exile.uncommon.utilityclasses.TooltipUtils;
 import net.minecraft.item.Item;
 import net.minecraft.text.LiteralText;
@@ -58,6 +59,12 @@ public abstract class BaseGemRuneItem extends Item {
 
     public List<Text> getBaseTooltip() {
         List<Text> tooltip = new ArrayList<>();
+
+        if (SlashRegistry.Runes()
+            .isEmpty()) {
+            return tooltip; // datapacks didnt register yet
+        }
+
         BaseRuneGem gem = getBaseRuneGem();
 
         int efflvl = gem.getEffectiveLevel();
