@@ -8,6 +8,8 @@
 "_comment": "# CREATIVE TAB",
 "itemGroup.mmorpg.main_group": "Age of Exile",
 "itemGroup.mmorpg.gem_group": "Age of Exile Gems",
+"itemGroup.mmorpg.runes_group": "Age of Exile Runes",
+"itemGroup.mmorpg.runeword_group": "Age of Exile Runewords",
 "itemGroup.mmorpg_uniques": "Unique Gear",
 "itemGroup.mmorpg_currency": "Crafting Items",
 "itemGroup.mmorpg_lootboxes": "LootBoxes",
@@ -16,9 +18,9 @@
 "_comment": "STATIONS",
 "block.mmorpg.modify_station": "Gear Modify Station",
 "block.mmorpg.repair_station": "Gear Repair Station",
-"block.mmorpg.salvage_station": "Gear Salvage Station",
-"block.mmorpg.map_device": "Map Device",
-"block.mmorpg.alchemy_station": "Alchemy Station",
+"block.mmorpg.repair_station": "Socketing Station",
+"block.mmorpg.salvage_station": "Salvaging Station",
+
 "_comment": "ITEM TOOLTIPS",
 "mmorpg.tooltip.item_modifiable_in_station": "Can be used inside Gear Modify Station",
 "mmorpg.tooltip.lootbox": "What could be inside?",
@@ -54,13 +56,7 @@
 "mmorpg.tooltip.spell_self_regen": "Heals the caster over time.",
 "mmorpg.tooltip.aoe_spell_nova": "Damages everyone around you.",
 "mmorpg.tooltip.ele_bonus_atk_dmg_spell": "Gives buff, deal bonus dmg at cost of mana.",
-"_comment": "REPAIR CAPACITORS",
-"item.mmorpg.capacitor0": "Common Capacitor",
-"item.mmorpg.capacitor1": "Uncommon Capacitor",
-"item.mmorpg.capacitor2": "Rare Capacitor",
-"item.mmorpg.capacitor3": "Epic Capacitor",
-"item.mmorpg.capacitor4": "Legendary Capacitor",
-"item.mmorpg.capacitor5": "Mythical Capacitor",
+
 "_comment": "ITEM TOOLTIPS",
 "_comment": "MAPS",
 "mmorpg.name.map": "Adventure Map",
