@@ -1,0 +1,17 @@
+{
+  "name": "Socketing",
+  "category": "getting_started",
+  "icon": "mmorpg:socket_station",
+  "sortnum": 4,
+  "pages": [
+	{  
+		"type": "text",   
+		"title": "Socketing Station",
+		"text": "After you get some gems, runes and items with sockets, you'll want to craft this station. Here you can add those gems and runes to items with sockets and even combo the runes into runewords!"
+	},  
+    {
+		"type": "crafting",
+		"recipe": "mmorpg:socket_station"   
+    }
+  ]
+}
