@@ -1,0 +1,22 @@
+{
+  "type": "minecraft:crafting_shaped",
+  "pattern": [
+    " B ",
+    " A ",
+    " C "
+  ],
+  "key": {  
+	"C": {
+      "item": "minecraft:furnace"
+    }, 
+	"A": {
+      "item": "minecraft:crafting_table"
+    }, 
+	"B": {
+      "item": "minecraft:gold_ingot"
+    }
+  },
+  "result": {
+    "item": "mmorpg:socket_station"
+  }
+}
