@@ -8,7 +8,7 @@ Repair it first, because any hit will break it. This is because when max durabil
 - added gems!
 - added runes!
 - added runewords!
-- added runeword awaken items // TODO
+- added socketing station!
 
 Gems are basically the jewels, but stackable and you can craft them into higher level versions.
 They're also datapacks!
@@ -34,6 +34,7 @@ This should hopefully stop the bug reports of "I can't heal my friend". But whet
 - fixed +0 exp messages
 - stopped mobs from spawning on daytime and made their spawn restrictions like vanilla mobs. So should be less spawns on nighttime too.
 - used the proper creative tab code, now no longer replace vanilla brewing tab. Seriously, nobody noticed?
+- added new stat, +maximum resistance
 
 v.1.1.3
 - fix day mobs config not working
